pre wrap fix + code ltr

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -228,6 +228,7 @@ pre {
   padding: 10px;
   margin: 10px 0;
   font-family: monospace;
+  white-space: pre-wrap;
 }
 
 /* footnotes in the google docs */
@@ -728,6 +729,8 @@ input.default-value {
     background-color: #ccc;
     font-weight: bold;
     padding: 0 5px;
+    direction: ltr;
+    text-align: left;
     }
 
 /* contribute page */
