--- a/style.css
+++ b/style.css
@@ -228,6 +228,7 @@ pre {
   padding: 10px;
   margin: 10px 0;
   font-family: monospace;
+  white-space: pre-wrap;
 }
 
 /* footnotes in the google docs */
